colcon_ws/log/build_2022-09-10_23-31-02/gatekeeper/stderr.log
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp: In member function ‘void gatekeeper::Gatekeeper::cloud_callback(sensor_msgs::msg::PointCloud2_<std::allocator<void> >::SharedPtr)’:
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:101:14: error: ‘filtered’ was not declared in this scope
  101 |   vox.filter(filtered);
      |              ^~~~~~~~
make[2]: *** [CMakeFiles/gatekeeper.dir/build.make:63: CMakeFiles/gatekeeper.dir/src/gatekeeper.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:80: CMakeFiles/gatekeeper.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
